# Obsydian-cards

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  ruff.toml
.github/workflows/: ci-checks.yaml
app/: main.py
app/models/: __init__.py  note.py  tag.py
app/notes_reader/: __init__.py  interfaces.py  loader.py
obsidian_notes/: Coverage.md  Docker.md  Pytest fixtures.md  Pytest plugins.md  Pytest.md
tests/fixtures/: note_with_no_tags.md  note_with_tag1.md  note_with_tag2.md
tests/models/: test_note.py  test_tag.py
tests/notes_loader/: test_loader.py
